stories/components/login/Login.module.css
.input,
.button {
  border: none;
  outline: none;
  background: none;
}
.tip {
  font-size: 20px;
  margin: 40px auto 50px;
  text-align: center;
}
.cont {
  overflow: hidden;
  position: relative;
  width: 900px;
  height: 465px;
  background: #fff;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  border-radius: 1.4rem;
}
.form {
  position: relative;
  width: 640px;
  height: 100%;
  transition: transform 1.2s ease-in-out;
  padding: 50px 30px 0;
}
.subCont {
  overflow: hidden;
  position: absolute;
  left: 640px;
  top: 0;
  width: 900px;
  height: 100%;
  padding-left: 260px;
  background: #fff;
  transition: transform 1.2s ease-in-out;
}
.cont.sSignup .subCont {
  transform: translate3d(-640px, 0, 0);
}
.button {
  display: block;
  margin: 0 auto;
  width: 260px;
  height: 36px;
  border-radius: 30px;
  color: #fff;
  font-size: 15px;
  cursor: pointer;
}
.img {
  overflow: hidden;
  z-index: 2;
  position: absolute;
  left: 0;
  top: 0;
  width: 260px;
  height: 100%;
  padding-top: 360px;
}
.img:before {
  content: "";
  position: absolute;
  right: 0;
  top: 0;
  width: 900px;
  height: 100%;
  background-image: url("../login/assets/login.background-blur.jpg");
  background-size: cover;
  transition: transform 1.2s ease-in-out;
}
.img:after {
  content: "";
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.6);
}
.cont.sSignup .img:before {
  transform: translate3d(640px, 0, 0);
}
.imgText {
  z-index: 2;
  position: absolute;
  left: 0;
  top: 50px;
  padding: 0 20px;
  text-align: center;
  color: #fff;
  transition: transform 1.2s ease-in-out;
}
.imgText h2 {
  margin-bottom: 10px;
  font-weight: normal;
}
.imgText p {
  font-size: 14px;
  line-height: 1.5;
}
.cont.sSignup .imgText.mUp {
  transform: translateX(520px);
}
.imgText.mIn {
  transform: translateX(-520px);
}
.cont.sSignup .imgText.mIn {
  transform: translateX(0);
}
.imgBtn {
  overflow: hidden;
  z-index: 2;
  position: relative;
  width: 130px;
  height: 36px;
  margin: 0 auto;
  background: transparent;
  color: #fff;
  text-transform: uppercase;
  font-size: 15px;
  cursor: pointer;
}
.imgBtn:after {
  content: "";
  z-index: 2;
  position: absolute;
  left: 0;
  top: 0;
  width: 97%;
  height: 89%;
  border: 2px solid #fff;
  border-radius: 30px;
}
.imgBtn span {
  position: absolute;
  left: 0;
  top: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100%;
  transition: transform 1.2s;
}
.imgBtn span.mIn {
  transform: translateY(-72px);
}
.cont.sSignup .imgBtn span.mIn {
  transform: translateY(0);
}
.cont.sSignup .imgBtn span.mUp {
  transform: translateY(72px);
}
.title {
  width: 100%;
  font-size: 26px;
  text-align: center;
}
.label {
  display: block;
  width: 260px;
  margin: 25px auto 0;
  text-align: center;
}
.label span {
  font-size: 12px;
  color: #cfcfcf;
  text-transform: uppercase;
}
.input {
  display: block;
  width: 100%;
  margin-top: 5px;
  padding-bottom: 5px;
  font-size: 16px;
  border-bottom: 1px solid rgba(0, 0, 0, 0.4);
  text-align: center;
}
.forgotPass {
  margin-top: 15px;
  text-align: center;
  font-size: 12px;
  color: #cfcfcf;
}
.submit {
  margin-top: 40px;
  margin-bottom: 20px;
  background: #3c4d1d;
  text-transform: uppercase;
}
.fbBtn {
  border: 2px solid #d3dae9;
  color: #8fa1c7;
}
.fbBtn span {
  font-weight: bold;
  color: #455a81;
}
.signIn {
  transition-timing-function: ease-out;
}
.cont.sSignup .signIn {
  transition-timing-function: ease-in-out;
  transition-duration: 1.2s;
  transform: translate3d(640px, 0, 0);
}
.signUp {
  transform: translate3d(-900px, 0, 0);
}
.cont.sSignup .signUp {
  transform: translate3d(0, 0, 0);
}
.iconLink {
  position: absolute;
  left: 5px;
  bottom: 5px;
  width: 32px;
}
.iconLink img {
  width: 100%;
  vertical-align: top;
}
.iconLink--twitter {
  left: auto;
  right: 5px;
}

